# Course_Project

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ai-service-ci.yml  api-gateway-ci.yml  enforce-rule-branch.yaml  frontend-ci.yml  identity-service-ci.yml  recruitment-service-ci.yml  template-backend.yaml  template-frontend.yaml
backend/services/ai-service/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
backend/services/ai-service/app/: deps.py  main.py  models.py  router.py  schemas.py
backend/services/ai-service/app/core/: config.py
backend/services/ai-service/app/db/: session.py
backend/services/ai-service/app/services/: llm_client.py  match_service.py
backend/services/ai-service/tests/: conftest.py
backend/services/ai-service/tests/api/: test_ai_routes.py  test_health.py
backend/services/ai-service/tests/integration/: test_match.py
backend/services/ai-service/tests/unit/: test_match_service.py
backend/services/api-gateway/: .env.example  Dockerfile
backend/services/api-gateway/app/: main.py
backend/services/identity-service/: .env.example  Dockerfile  Makefile  pyproject.toml
backend/services/identity-service/app/: main.py  models.py
backend/services/identity-service/app/core/: config.py
backend/services/identity-service/app/db/: session.py
backend/services/identity-service/tests/: conftest.py
backend/services/recruitment-service/: .env.example  Dockerfile  pyproject.toml
demo/: aimatch_demo_data.csv  aimatch_demo_data.json  crawler_itviec.py  seed_data.py
frontend/: Dockerfile  package-lock.json  package.json  wrangler.jsonc
frontend/src/types/: job.ts  matching.ts  user.ts
frontend/src/utils/: pdfExtractor.ts
infra/k8s-spec/argocd/: aimatch-stage-application.yaml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
(+72 files in other folders)
